<resources>
    <string name="app_name">Bike RENTAL</string>
    <string name="bikes_available">Bikes Available</string>
    <string name="bikes">REVIEWS</string>

    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="reviews">REVIEWS</string>
    <string name="article_text">\n\n\n\n\n\n\n\nThat’s the thing about fall 2022’s most wantable bikes—they come to life with you. \n Run down the street with amazing bikes. Dance so your Altuzarra paillettes clang and jostle. Let your Balenciaga train whip with the wind.\n bikes is just an accessory to your story—where are you going next?
   \n \n After the rise—literally and figuratively—of the kawazaki, the only natural evolution was revolution. \n Saint Laurent, Louis Vuitton, Sacai, and more pushed longer, floor-sweeping lengths for fall 2022. For those who need a little extra height, Rick Owens and Altuzarra have the platforms to roads.\n
    \n \n The technologically savvy bodices at Christian Dior and metal bustiers at Balmain are pushing corsetry into the future—less mode of seduction, more mode of protection.\n Donatella Versace naturally sexed hers up atversace, while Alessandro Michele gave his a sporty twist at Gucci with an Adidas collaboration, but the message remains: The corset is here to stay.\n
    \n www.bikes.com \n</string>
</resources>